--- a/public/style1/style.css
+++ b/public/style1/style.css
@@ -163,11 +163,11 @@ header{
         }
        .contact-value{
 
-           position: relative;
+          position: relative;
            margin-left:130px;
            margin-top: -23px;
            padding:6px;
-           background-color: black;
+           background-color: rgb(0, 0, 0);
            height: 24px;
            width:470px;
             }
@@ -177,3 +177,60 @@ header{
             .contact-skype .contact-value{color:transparent;}
             a:active {color:red;}
             a:visited {color:red; }
+            @media screen and (max-width:992px){
+               
+                #contact h3{display:none;}
+                #contact{
+                position: absolute;
+                 bottom:500px;
+                 left:100px;
+                 padding-left:10px;
+                 margin-top:1750px;
+                 
+                }
+        
+                .contact{
+        
+                    height: 25px;;
+                    margin:-15px;
+                    width:600px;
+                    padding:5px;
+                    background-color: red;
+                    color:white;
+                }
+               .contact-value{
+        
+                  position: relative;
+                   margin-left:130px;
+                   margin-bottom: 50px;
+                   padding:6px;
+                   background-color: rgb(255, 255, 255);
+                   height: 24px;
+                   width:470px;
+                    }
+                    .content{
+       
+                        
+                        grid-template-columns: 1fr ;
+                        margin: 0 auto;
+                        width: 80%;
+                
+                    }
+                    figure{
+      
+                        width:10%;
+                        position:absolute;
+                        top:120px;
+                        left:100px;
+                           
+                      }
+                      header{
+                        background-color: grey;
+                        max-width: 80%;
+                        margin-left: 7%;
+                        padding-top:20px;
+                        padding-left:100px; 
+                        padding-bottom: 80px;
+                        height:170px;
+                        }
+                    }
